# docker-fastapi-deploy

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: cicd.yml
src/docker_fastapi_deploy/: main.py  model.pkl  train.py
tests/: test_prediction.py
